--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <script src="search.js"></script>
     <div class="bottom">
       <div id="app" class="center">
-        <!--
-                <div v-if="showbook" v-for="b in filteredBook" :class={favourite:b.isFav} @click="b.isFav =!b.isFav">
+        
+        <div v-if="showbook" v-for="b in filteredBook" :class={favourite:b.isFav} @click="b.isFav =!b.isFav">
             <img :src="b.img" width="200" height="100">
             <h3>Book- {{b.title}}</h3>
             <h3>Author- {{b.author}}</h3>
@@ -35,7 +35,7 @@
         <br>
         
         <a :href="link">YouTube</a>
-            -->
+        <script src="app.js"></script>
       </div>
       <div class="right">
         <div class="o-profile">
